--- a/index.html
+++ b/index.html
@@ -4,28 +4,163 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
-    <header class="header">
 
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
+        <a class="link header__link" href="#">Узнать &#8594;</a>
+      </h2>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic"></div>
     </header>
+
     <main class="content">
+
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <h2 class="two-columns__brief_title">Главные проблемы в обучении</h2>
+          </div>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title digits__section-title_value">Цифры и факты</h2>
+        <p class="section-subtitle digits__section-subtitle_value" >Про учёбу и мозг</p>
+        <ul class="table digits__table_value">
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">86 миллиардов</h3>
+            <p class="table__text digits_table-text_value">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">2,1 миллиарда</h3>
+            <p class="table__text digits_table-text_value">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text digits_table-text_value">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">1000 терабайт</h3>
+            <p class="table__text digits_table-text_value">Объём памяти человека</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">500 триллионов</h3>
+            <p class="table__text digits_table-text_value">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">420 миллионов</h3>
+            <p class="table__text digits_table-text_value">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text digits_table-text_value">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">17-20 лет</h3>
+            <p class="table__text digits_table-text_value">Пик обучаемости</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">1885 год</h3>
+            <p class="table__text digits_table-text_value">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell digits_table-cell_value">
+            <h3 class="table__heading digits_table-heading_value">1889 год</h3>
+            <p class="table__text digits_table-text_value">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="link feynman__link">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
+        <div class="kaufman__triangle"></div>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
       </section>
-    </main>
-    <footer class="footer">
 
+    </main>
+
+    <footer class="footer">
+      <div class="footer__columns">
+
+        <div class="footer__column footer__column_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy;2019. Виктор Абанькин</p>
+        </div>
+
+        <div class="footer__column footer__column_content_info">
+          <p class="footer__column-heading">О практикуме</p>
+          <div class="footer__column-links">
+            <a class="link footer__column-link" href="#">Главная</a>
+            <a class="link footer__column-link" href="#">Концепция</a>
+            <a class="link footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+
+        <div class="footer__column footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <div class="footer__column-links">
+            <a class="link footer__column-link" href="#"><span class="footer__social-icon footer__social-icon_item1">Facebook</span></a>
+            <a class="link footer__column-link" href="#"><span class="footer__social-icon footer__social-icon_item2">ВКонтакте</span></a>
+            <a class="link footer__column-link" href="#"><span class="footer__social-icon footer__social-icon_item3">Instagram</span></a>
+          </div>
+        </div>
+
+      </div>
     </footer>
+
   </div>
 </body>
 </html>
