--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
         <a class="link header__link" href="#">Узнать &#8594;</a>
       </h2>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Здесь должна быть картинка...">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик не хочет идти в школу.">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -37,27 +37,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="Здесь должна быть картинка...">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Книга в руках.">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеяное мышление</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Здесь должна быть картинка...">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Статуя ученика.">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Здесь должна быть картинка...">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Люди в здании.">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Здесь должна быть картинка...">
+            <img class="cards__image" src="./images/cards-question.png" alt="Человек в помещении с окнами.">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Здесь должна быть картинка...">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг на ладони.">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -137,11 +137,11 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир - школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир - школа» нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир - школа» нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джорж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Здесь должна быть картинка...">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги.">
             <a class="link khan__buy-link" href="#" target="_blank">Купить книгу &#8594;</a>
           </div>
         </div>
@@ -200,16 +200,16 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li>
-            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Здесь должна быть картинка..."></a>
+            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Картинка ссылки Arzamas."></a>
           </li>
           <li>
-            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-n1.svg" alt="Здесь должна быть картинка..."></a>
+            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-n1.svg" alt="Картинка ссылки N+1."></a>
           </li>
           <li>
-            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-strelka.svg" alt="Здесь должна быть картинка..."></a>
+            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-strelka.svg" alt="Картинка ссылки Strelka."></a>
           </li>
           <li>
-            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-polka.svg" alt="Здесь должна быть картинка..."></a>
+            <a  class="link" href="#" target="_blank"><img class="resources__logo" src="./images/resources-polka.svg" alt="Картинка ссылки Полка."></a>
           </li>
         </ul>
       </section>
@@ -226,20 +226,32 @@
 
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О практикуме</h2>
-          <div class="footer__column-links">
-            <a class="link footer__column-link" href="#">Главная</a>
-            <a class="link footer__column-link" href="#">Концепция</a>
-            <a class="link footer__column-link" href="#">Наставники</a>
-          </div>
+          <ul class="footer__column-links">
+            <li>
+              <a class="link footer__column-link" href="#">Главная</a>
+            </li>
+            <li>
+              <a class="link footer__column-link" href="#">Концепция</a>
+            </li>
+            <li>
+              <a class="link footer__column-link" href="#">Наставники</a>
+            </li>
+          </ul>
         </nav>
 
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <div class="footer__column-links">
-            <a class="link footer__column-link" href="#" target="_blank"><span class="footer__social-icon footer__social-icon_name_facebook">Facebook</span></a>
-            <a class="link footer__column-link" href="#" target="_blank"><span class="footer__social-icon footer__social-icon_name_vk">ВКонтакте</span></a>
-            <a class="link footer__column-link" href="#" target="_blank"><span class="footer__social-icon footer__social-icon_name_instagram">Instagram</span></a>
-          </div>
+          <ul class="footer__column-links">
+            <li>
+              <a class="link footer__column-link" href="#" target="_blank"><span class="footer__social-icon footer__social-icon_name_facebook">Facebook</span></a>
+            </li>
+            <li>
+              <a class="link footer__column-link" href="#" target="_blank"><span class="footer__social-icon footer__social-icon_name_vk">ВКонтакте</span></a>
+            </li>
+            <li>
+              <a class="link footer__column-link" href="#" target="_blank"><span class="footer__social-icon footer__social-icon_name_instagram">Instagram</span></a>
+            </li>
+          </ul>
         </nav>
 
       </div>
