--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
   <div class="page">
 
-    <header class="header">
+    <header class="header rotation">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
         <a class="link header__link" href="#">Узнать &#8594;</a>
       </h2>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик не хочет идти в школу.">
-      <div class="header__square-pic rotation"></div>
+      <!--  <div class="header__square-pic rotation"></div> -->  <!--Выключаем чтобы сделать через псевдоэлемент-->
     </header>
 
     <main class="content">
@@ -147,8 +147,8 @@
         </div>
       </section>
 
-      <section class="kaufman">
-        <div class="kaufman__triangle rotation"></div>
+      <section class="kaufman rotation">
+        <!-- <div class="kaufman__triangle rotation"></div> --> <!--Выключаем чтобы сделать через псевдоэлемент-->
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
